# Music-Genre-Classfication

./: .env.example  .gitattributes  .gitignore  CMPS344_Phase2_Proposal.docx  FINAL_REPORT.docx  FINAL_REPORT.md  Makefile  PROJECT_EXPLANATION.md  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
configs/: project.yaml
data/processed/splits/: external.csv
models/: best_model.joblib
src/music_genre/: __init__.py  config.py  dashboard.py  data.py  evaluate.py  features.py  labels.py  metrics.py  models.py  schema.py  train.py
tests/: test_data.py  test_features.py  test_metrics_labels.py  test_pipeline.py
